--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,14 +1,34 @@
----
-name Test
+name: Deploy
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+    tags:
+      - 'v*.*.*'
 
 jobs:
+
   build:
-    runs-on: windows-latest
-  tests:
-    name: Run unit tests
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v2.1.0
-    - run: dotnet test
+    - uses: actions/checkout@v1
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 3.0.100
+    - name: Generate coverage report
+      run: |
+        cd ./FluentEnsure.UnitTests/
+        dotnet test /p:CollectCoverage=true /p:CoverletOutput=TestResults/ /p:CoverletOutputFormat=lcov
+    - name: Publish coverage report to coveralls.io
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        path-to-lcov: ./FluentEnsure.UnitTests/TestResults/coverage.info 
+    - name: Build and deploy package
+      run: |
+        cd ./MyLibrary/
+        dotnet publish -c=Release
+        # deploy
