--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,13 +20,13 @@ jobs:
         dotnet-version: 3.0.100
     - name: Generate coverage report
       run: |
-        cd ./FluentEnsure.UnitTests/
+        cd ./src/FluentEnsure.UnitTests/
         dotnet test /p:CollectCoverage=true /p:CoverletOutput=TestResults/ /p:CoverletOutputFormat=lcov
     - name: Publish coverage report to coveralls.io
       uses: coverallsapp/github-action@master
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
-        path-to-lcov: ./FluentEnsure.UnitTests/TestResults/coverage.info 
+        path-to-lcov: ./src/FluentEnsure.UnitTests/TestResults/coverage.info 
     - name: Build and deploy package
       run: |
         cd ./MyLibrary/
